# Drcom-Core

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.MD  CHANGELOG.md  CONTRIBUTING.MD  README.md  ROADMAP.md  config.toml.example  example.py  mkdocs.yml  pyproject.toml  readme.md  requirements.txt  run.py
.github/workflows/: publish_docs.yml  release.yml
docs/: 5.2.0(D)Protocol.md  CONTRIBUTING.md  _config.yml  api_reference.md  architecture.md  changelog.md  config_reference.md  index.md  install.md  latest-wired-python3.py  protocol_d.md  quickstart.md
docs/api_reference/: config.md  core.md  exceptions.md  network.md  protocols.md
docs/contributor_guide/: CONTRIBUTING.md  overview.md  protocol_d.md
docs/stylesheets/: extra.css
scripts/: build.ps1
src/: main.py
src/drcom_core/: __init__.py  config.py  core.py  exceptions.py  latest-wired-python3.py  main.py  network.py  state.py  utils.py
src/drcom_core/protocols/: 5_2_0_D_version.py  __init__.py  base.py  challenge.py  constants.py  keep_alive.py  login.py  logout.py  version_520d.py
src/drcom_core/protocols/d_series/: __init__.py  constants.py  packets.py  strategy.py
src/drcom_protocol/: challenge.py  constants.py  keep_alive.py  login.py  logout.py  x07_package.py  xff_package.py
tests/: conftest.py  test_config.py  test_core.py  test_d_series_packets.py  test_error_mapping.py  test_logout.py  test_network.py  test_protocol_login.py  test_protocols_misc.py  test_state_machine.py  test_strategy_flow.py  test_version_520d_protocol.py
tests/drcom_core/: core.py  test_config.py
tests/drcom_core/protocols/: conftest.py  test_challenge.py  test_keepalive.py  test_login.py  test_logout.py  test_version_520d_protocol.py
tests/drcom_core/protocols/d_series/: packets.py  strategy.py
tests/test_core/: test_core.py
tests/test_protocol/: test_challenge.py  test_keep_alive.py  test_login.py  test_login_packet_building.py  test_logout.py
