# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drcom-core"
version = "1.0.0-alpha.2"
description = "Dr.COM 认证核心库 (5.2.0 D版实现)"
readme = "README.md"
license = { text = "AGPL-3.0-only" }
requires-python = ">=3.13"

dependencies = [
    "python-dotenv>=1.0.0",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU Affero General Public License v3 (AGPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: System :: Networking :: Authentication",
]

[project.urls]
Homepage = "https://github.com/CaelestisAstesia/Drcom-Core"
Repository = "https://github.com/CaelestisAstesia/Drcom-Core"
Issues = "https://github.com/CaelestisAstesia/Drcom-Core/issues"

[tool.setuptools.packages.find]
where = ["src"]
[tool.pytest.ini_options]
pythonpath = ["src"]
