# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# --- 核心元数据 ---
name = "drcom-core"
version = "1.0.0b1"
description = "Dr.COM 认证核心库"
readme = "README.md"
license = { text = "AGPL-3.0-only" }
requires-python = ">=3.13"

# --- 依赖 ---
dependencies = []

# --- 分类器 (用于 PyPI) ---
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU Affero General Public License v3 (AGPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: System :: Networking :: Authentication",
]

# --- 项目链接 ---
[project.urls]
Homepage = "https://github.com/CaelestisAstesia/Drcom-Core"
Repository = "https://github.com/CaelestisAstesia/Drcom-Core"
Issues = "https://github.com/CaelestisAstesia/Drcom-Core/issues"

# --- 包查找配置 ---
[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
